--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <h1>Weather App</h1>
+    <h1>Wwlcome to our Weather App</h1>
 
     <form id="weatherForm" action="/" method="post">
         <label for="user_input">Enter City or Zip Code:</label>
