--- a/templates/index.html
+++ b/templates/index.html
@@ -69,8 +69,8 @@
     <h1>Welcome to our Weather App</h1>
 
     <form id="weatherForm" action="/" method="post">
-        <label for="user_input">Enter City or Zip Code:</label>
-        <input type="text" id="user_input" name="user_input" required>
+        <label for="user_input">City or Zip Code:</label>
+        <input type="text" id="user_input" required>
         <button type="submit">Get Weather</button>
     </form>
 
