--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,34 +1,42 @@
-/* static/css/style.css */
 body {
-    font-family: 'Arial', sans-serif;
-    margin: 20px;
+    font-family: Arial, sans-serif;
+    background-color: #f0f0f0;
+    color: #333;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
 }
 
 h1 {
-    color: #333;
+    margin-bottom: 20px;
 }
 
-/* Styles for the specific form with id "weatherForm" */
-#weatherForm {
-    background-color: #ee0a0a;
-    padding: 15px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 label {
-    font-weight: bold;
+    font-size: 16px;
+    margin-bottom: 10px;
 }
 
 input {
-    padding: 8px;
-    margin-right: 10px;
+    padding: 10px;
+    margin-bottom: 20px;
+    width: 300px;
+    box-sizing: border-box;
 }
 
 button {
-    padding: 8px 15px;
-    background-color: #4CAF50;
-    color: white;
+    padding: 10px;
+    background-color: #4caf50;
+    color: #fff;
     border: none;
     cursor: pointer;
 }
@@ -38,9 +46,10 @@ button:hover {
 }
 
 h2 {
-    color: #333;
+    margin-top: 30px;
 }
 
 p {
-    margin: 10px 0;
+    font-size: 14px;
+    margin: 5px 0;
 }
