added amount input to currency

--- a/templates/index.html
+++ b/templates/index.html
@@ -26,6 +26,8 @@
         <input type="text" id="user_input_currency_1" name="user_input_currency_1" required>
         <label for="user_input_currency_2">Enter currency 2:</label>
         <input type="text" id="user_input_currency_2" name="user_input_currency_2" required>
+        <label for="user_input_amount">Enter amount:</label>
+        <input type="text" id="user_input_amount" name="user_input_amount">
         <button type="submit">Get Value</button>
     </form>
 
