bring back <p> tags for weather

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,10 +18,27 @@
     </form>
 
     {% if weather_data %}
-    <!-- Weather data display -->
+    <h2>{{ weather_data.location.name }}, {{ weather_data.location.region }}, {{ weather_data.location.country }}</h2>
+
+        {% if weather_data.current.is_day == 0 %}
+            <p>{{ weather_data.location.localtime }} Night</p>
+        {% elif weather_data.current.is_day == 1 %}
+            <p>{{ weather_data.location.localtime }}  Day</p>
+        {% endif %}
+        <p>Temperature: {{ weather_data.current.temp_c }}°C ({{ weather_data.current.temp_f }}°F)</p>
+        <p>Feels like: {{ weather_data.current.feelslike_c }}°C ({{ weather_data.current.feelslike_f }}°F)</p>
+        <p>Wind: {{ weather_data.current.wind_kph }} km/h, {{ weather_data.current.wind_mph }} mi/h, {{ weather_data.current.wind_dir }}</p>
+        
+        <p>Condition: {{ weather_data.current.condition.text }}</p>
+        <p>Pressure: {{ weather_data.current.pressure_mb }} mb; {{ weather_data.current.pressure_in }} in</p>
+        <p>Humidity: {{ weather_data.current.humidity }}</p>
+        <p>Cloud: {{ weather_data.current.cloud }}</p>
+        <p>Visibility: {{ weather_data.current.vis_miles }} miles ; {{ weather_data.current.vis_km }} km</p>
+        <p>Gust: {{ weather_data.current.gust_mph }} mph ; {{ weather_data.current.gust_kph }} kph</p>
+        <p>Precipitation: {{ weather_data.current.precip_in }} inches ; {{ weather_data.current.precip_mm }} mm</p>
     {% endif %}
 
-    <form id="currencyForm" action="/" method="post">
+    <form id="currencyForm" action="/currency" method="post">
         <label for="user_input_currency_1">Enter currency you want to sell:</label>
         <input type="text" id="user_input_currency_1" name="user_input_currency_1" required>
         <label for="user_input_currency_2">Enter currency you want to purchase:</label>
