--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,3 @@
-<!-- templates/index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,7 +9,7 @@
 <body>
 
     <h1>Web Board</h1>
-
+    <p><a href="{{ url_for('currency') }}"><button>Currency Converter</button></a></p>
     <form id="weatherForm" action="/" method="post">
         <label for="user_input">Enter City or Zip Code:</label>
         <input type="text" id="user_input" name="user_input" required>
@@ -36,21 +35,6 @@
         <p>Visibility: {{ weather_data.current.vis_miles }} miles ; {{ weather_data.current.vis_km }} km</p>
         <p>Gust: {{ weather_data.current.gust_mph }} mph ; {{ weather_data.current.gust_kph }} kph</p>
         <p>Precipitation: {{ weather_data.current.precip_in }} inches ; {{ weather_data.current.precip_mm }} mm</p>
-    {% endif %}
-
-    <form id="currencyForm" action="/currency" method="post">
-        <label for="user_input_currency_1">Enter currency you want to sell:</label>
-        <input type="text" id="user_input_currency_1" name="user_input_currency_1" required>
-        <label for="user_input_currency_2">Enter currency you want to purchase:</label>
-        <input type="text" id="user_input_currency_2" name="user_input_currency_2" required>
-        <label for="user_input_amount">Enter amount:</label>
-        <input type="text" id="user_input_amount" name="user_input_amount">
-        <button type="submit">Get Value</button>
-    </form>
-
-    {% if currency_data %}
-        <h2>You can sell {{user_input_amount}} {{user_input_currency_1}} for {{ currency_data.amount }} {{user_input_currency_2}}</h2>
-
     {% endif %}
 
     {% if error_message %}
