--- a/templates/currency.html
+++ b/templates/currency.html
@@ -1,16 +1,16 @@
-<!-- templates/currency.html -->
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <title>Currency Converter</title>
 </head>
+
 <body>
-
+    <h1>Web Board</h1>
     <p><a href="{{ url_for('index') }}"><button>Main Page</button></a></p>
-
     <form id="currencyForm" action="/currency" method="post">
         <label for="user_input_currency_1">Enter currency you want to sell:</label>
         <input type="text" id="user_input_currency_1" name="user_input_currency_1" required>
