--- a/templates/currency.html
+++ b/templates/currency.html
@@ -16,6 +16,9 @@
 <p><a href="{{ url_for('index') }}">
     <button>Main Page</button>
 </a></p>
+<p>Available 150 currency market options</p>
+<p>Start typing currency Key (ex:"USD")</p>
+<p>You can type country name and choose one of suggested options</p>
 <form id="currencyForm" action="/currency" method="post">
     <label for="user_input_currency_1">Enter currency you want to sell:</label>
     <input type="text" id="user_input_currency_1" name="user_input_currency_1" required>
