--- a/templates/currency.html
+++ b/templates/currency.html
@@ -32,7 +32,7 @@
 {% if currency_data %}
 <h2>You can sell {{user_input_amount}} {{user_input_currency_1}} for {{ currency_data.amount }}
     {{user_input_currency_2}}</h2>
-<p>Result showing minimal value ("sell") from the market</p>
+<p>Result showing "sell" (less) value from the currency market</p>
 {% endif %}
 
 {% if error_message %}
