--- a/templates/currency.html
+++ b/templates/currency.html
@@ -12,10 +12,9 @@
 </head>
 
 <body>
-<h1>Web Board</h1>
-<p><a href="{{ url_for('index') }}">
-    <button>Main Page</button>
-</a></p>
+<h1>Currency</h1>
+<p><a href="{{ url_for('logout') }}"><button>Logout</button></a>
+    <a href="{{ url_for('weather') }}"><button>Weather</button></a></p>
 <p>Available 150 currency market options</p>
 <p>Start typing currency Key (ex:"USD")</p>
 <p>You can type country name and choose one of suggested options</p>
