--- a/templates/about.html
+++ b/templates/about.html
@@ -5,30 +5,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-    <title>Daily Notes</title>
+    <title>Dashboard</title>
 </head>
 
 <body>
-    <h2>Main Page</h2>
+    <h2>About</h2>
     {% if 'username' in session %}
         <p><a href="{{ url_for('logout') }}"><button>Logout</button></a>
             <a href="{{ url_for('index') }}"><button>Main Page</button></a>
             <a href="{{ url_for('dashboard') }}"><button>Dashboard</button></a>
-            <a href="{{ url_for('about') }}"><button>About</button></a></p>
     {% else %}
         <p><a href="{{ url_for('login') }}"><button>Login</button></a>
             <a href="{{ url_for('register') }}"><button>Register</button></a>
             <a href="{{ url_for('about') }}"><button>About</button></a>
-    {% endif %}
-
-    {% if error_message %}
-    <p class="error-message">{{ error_message }}</p>
+            <a href="{{ url_for('index') }}"><button>Main Page</button></a></p>
     {% endif %}
     <div class="center-div">
-        <p class="connect-text" style="font-size: 10px;"><a href="https://www.linkedin.com/in/yaroslav-ovsiienko">
-            <img src="{{ url_for('static', filename='link-icons/linkedin-in.svg') }}" alt=linkedin.svg></a>
-        </p>
+        <h2>Content "About"</h2>
+        <p>App doesn`t store any personal data.</p>
+        <p>DB implemented for... saving users settings...</p>
+        <p>Dashboard Page includes all functionalities available</p>
+        <p style="font-size: 10px;">12.06.2023</p>
     </div>
-
 </body>
+
 </html>
