--- a/templates/currency.html
+++ b/templates/currency.html
@@ -12,9 +12,17 @@
 </head>
 
 <body>
-<h1>Currency</h1>
-<p><a href="{{ url_for('logout') }}"><button>Logout</button></a>
-    <a href="{{ url_for('weather') }}"><button>Weather</button></a></p>
+<h2>Currency</h2>
+{% if 'username' in session %}
+    <p><a href="{{ url_for('logout') }}"><button>Logout</button></a>
+        <a href="{{ url_for('index') }}"><button>Main Page</button></a>
+        <a href="{{ url_for('dashboard') }}"><button>Dashboard</button></a>
+{% else %}
+    <p><a href="{{ url_for('login') }}"><button>Login</button></a>
+        <a href="{{ url_for('register') }}"><button>Register</button></a>
+        <a href="{{ url_for('about') }}"><button>About</button></a>
+        <a href="{{ url_for('index') }}"><button>Main Page</button></a></p>
+{% endif %}
 <p>Available 150 currency market options</p>
 <p>Start typing currency Key (ex:"USD")</p>
 <p>You can type country name and choose one of suggested options</p>
