--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -9,10 +9,19 @@
 </head>
 
 <body>
-    <p><a href="{{ url_for('logout') }}"><button>Logout</button></a>
-        <a href="{{ url_for('weather') }}"><button>Weather</button></a>
-        <a href="{{ url_for('currency') }}"><button>Currency</button></a></p>
-
+    <h2>Dashboard</h2>
+    {% if 'username' in session %}
+        <p><a href="{{ url_for('logout') }}"><button>Logout</button></a>
+            <a href="{{ url_for('index') }}"><button>Main Page</button></a>
+            <a href="{{ url_for('about') }}"><button>About</button></a>
+            <a href="{{ url_for('weather') }}"><button>Weather</button></a>
+            <a href="{{ url_for('currency') }}"><button>Currency</button></a></p>
+    {% else %}
+        <p><a href="{{ url_for('login') }}"><button>Login</button></a>
+            <a href="{{ url_for('register') }}"><button>Register</button></a>
+            <a href="{{ url_for('about') }}"><button>About</button></a>
+            <a href="{{ url_for('index') }}"><button>Main Page</button></a></p>
+    {% endif %}
     <div class="center-div">
         <h2>Welcome, {{ username }}!</h2>
         <p>Dashboard content goes here.</p>
