--- a/templates/register.html
+++ b/templates/register.html
@@ -9,8 +9,20 @@
 </head>
 
 <body>
+    <h2>Registration</h2>
+    {% if 'username' in session %}
+        <p><a href="{{ url_for('logout') }}"><button>Logout</button></a>
+            <a href="{{ url_for('index') }}"><button>Main Page</button></a>
+            <a href="{{ url_for('dashboard') }}"><button>Dashboard</button></a>
+            <a href="{{ url_for('about') }}"><button>About</button></a></p>
+    {% else %}
+        <p><a href="{{ url_for('login') }}"><button>Login</button></a>
+            <a href="{{ url_for('register') }}"><button>Register</button></a>
+            <a href="{{ url_for('about') }}"><button>About</button></a>
+            <a href="{{ url_for('index') }}"><button>Main Page</button></a></p>
+    {% endif %}
     <div class="center-div">
-        <h2>Register</h2>
+        <h2>Registration</h2>
         <form method="post">
             <label for="username">Username:</label>
             <input type="text" id="username" name="username" required>
@@ -18,7 +30,10 @@
             <label for="password">Password:</label>
             <input type="password" id="password" name="password" required>
             <br>
-            <button type="submit">Register</button>
+            <label for="confirm_password">Confirm Password:</label>
+            <input type="password" id="confirm_password" name="confirm_password" required>
+            <br>
+            <button type="submit">Submit</button>
         </form>
         {% if error_message %}
             <p class="error-message">{{ error_message }}</p>
