--- a/templates/weather.html
+++ b/templates/weather.html
@@ -10,9 +10,16 @@
 
 <body>
     <h1>Weather</h1>
-    <p><a href="{{ url_for('currency') }}"><button>Currency Page</button></a>
-        <a href="{{ url_for('logout') }}"><button>Logout</button></a>
-        <a href="{{ url_for('dashboard') }}"><button>Dashboard</button></a></p>
+        {% if 'username' in session %}
+        <p><a href="{{ url_for('logout') }}"><button>Logout</button></a>
+            <a href="{{ url_for('index') }}"><button>Main Page</button></a>
+            <a href="{{ url_for('dashboard') }}"><button>Dashboard</button></a>
+    {% else %}
+        <p><a href="{{ url_for('login') }}"><button>Login</button></a>
+            <a href="{{ url_for('register') }}"><button>Register</button></a>
+            <a href="{{ url_for('about') }}"><button>About</button></a>
+            <a href="{{ url_for('index') }}"><button>Main Page</button></a></p>
+    {% endif %}
     <form id="weatherForm" action="/weather" method="post">
         <label for="user_input">Enter City or Zip Code:</label>
         <input type="text" id="user_input" name="user_input" required>
