--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
     {% endif %}
     <div class="center-div">
         <p class="connect-text" style="font-size: 10px;"><a href="https://www.linkedin.com/in/yaroslav-ovsiienko">
-            <img src="{{ url_for('static', filename='link-icons/linkedin-in.svg') }}" alt=linkedin.svg></a>
+            <img src="{{ url_for('static', filename='link-icons/linkedin.svg') }}" alt=linkedin.svg></a>
         </p>
     </div>
 
