--- a/static/style.css
+++ b/static/style.css
@@ -7,7 +7,7 @@ body {
 
 .center-div {
     text-align: center;
-    margin-top: 250px;
+    margin-top: 150px;
 }
 
 button {
@@ -24,12 +24,12 @@ button:hover {
 }
 
 .weather-info {
-    margin-top: 20px;
+    margin-top: 150px;
     text-align: center;
 }
 
 .forecast-table-container {
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 .forecast-table {
@@ -64,6 +64,7 @@ button:hover {
 .connect-text {
     text-align: center;
     margin-bottom: 20px; /* Adjust margin as needed */
+    font-size: 16px
 }
 
 .connect-text a {
@@ -71,11 +72,47 @@ button:hover {
     color: #333; /* Adjust color as needed */
 }
 
-.connect-text i {
-    font-size: 50px; /* Adjust icon size as needed */
-    margin-right: 5px; /* Add margin between the icon and text */
+.connect-text img {
+    font-size: 20px; /* Adjust icon size as needed */
+    margin-right: 10px; /* Add margin between the icon and text */
 }
 
 .connect-text button {
     /* Add any additional styling for your button */
+}
+
+.header-pages {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: #334; /* Change the background color to your preference */
+    padding: 5px; /* Adjust padding as needed for spacing */
+    text-align: left; /* Center the buttons horizontally */
+}
+
+.header-pages a {
+    text-decoration: none;
+    color: #fff; /* Change the text color to your preference */
+    margin: 0 10px; /* Add margin between buttons */
+}
+
+.header-pages button {
+    font-size: 16px; /* Adjust button font size */
+}
+
+.input-field {
+    position: fixed;
+    top: 50;
+    left: 20;
+    width: 25%;
+    background-color: #335; /* Change the background color to your preference */
+    padding: 20px; /* Adjust padding as needed for spacing */
+    text-align: center; /* Center the buttons horizontally */
+    font-size: 16px;
+}
+
+.input-field button {
+    font-size: 16px; /* Adjust button font size */
+    width: 15
 }
