--- a/templates/about.html
+++ b/templates/about.html
@@ -22,10 +22,20 @@
     {% endif %}
     <div class="center-div">
         <h2>Content "About"</h2>
-        <p>App doesn`t store any personal data.</p>
+        <p>App does`t store any personal data.</p>
         <p>DB implemented for... saving users settings...</p>
+        <p>You have to be logged in to get access to Dashboard Page</p>
         <p>Dashboard Page includes all functionalities available</p>
-        <p style="font-size: 10px;">12.06.2023</p>
+        <p>Registration does`t require email verification</p>
+        <p>Please use your Nickname as username while registration</p>
+        <p>Use simple password while registration (ex."1234" or "000")</p>
+        <p>From Dash Board you can access : Currency converter with 150+ currencies, Current weather da0a and weather forecast for 4+ days </p>
+        <p style="font-size: 10px;">12.07.2023</p>
+        <p class="connect-text">To contribute to the next release, please contact
+            <a href="https://www.linkedin.com/in/yaroslav-ovsiienko">
+                <img src="{{ url_for('static', filename='link-icons/linkedin.svg') }}" alt=linkedin.svg>
+            </a>
+        </p>
     </div>
 </body>
 
