--- a/static/style.css
+++ b/static/style.css
@@ -2,7 +2,7 @@ body {
     font-family: 'Arial', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f0f0f0;
+    background-color: #dbd9d0;
 }
 
 .center-div {
@@ -64,7 +64,7 @@ button:hover {
 .connect-text {
     text-align: center;
     margin-bottom: 20px; /* Adjust margin as needed */
-    font-size: 16px
+    font-size: 16px;
 }
 
 .connect-text a {
@@ -74,7 +74,8 @@ button:hover {
 
 .connect-text img {
     font-size: 20px; /* Adjust icon size as needed */
-    margin-right: 10px; /* Add margin between the icon and text */
+    margin-left: 10px; /* Add margin between the icon and text */
+    width: 30px;
 }
 
 .connect-text button {
@@ -86,7 +87,7 @@ button:hover {
     top: 0;
     left: 0;
     width: 100%;
-    background-color: #334; /* Change the background color to your preference */
+    background-color: #b8b5a3; /* Change the background color to your preference */
     padding: 5px; /* Adjust padding as needed for spacing */
     text-align: left; /* Center the buttons horizontally */
 }
@@ -94,7 +95,7 @@ button:hover {
 .header-pages a {
     text-decoration: none;
     color: #fff; /* Change the text color to your preference */
-    margin: 0 10px; /* Add margin between buttons */
+    margin: 10px; /* Add margin between buttons */
 }
 
 .header-pages button {
@@ -103,9 +104,9 @@ button:hover {
 
 .input-field {
     position: fixed;
-    top: 50;
-    left: 20;
-    width: 25%;
+    top: 70px;
+    left: 0px;
+    width: 100%;
     background-color: #335; /* Change the background color to your preference */
     padding: 20px; /* Adjust padding as needed for spacing */
     text-align: center; /* Center the buttons horizontally */
@@ -113,6 +114,22 @@ button:hover {
 }
 
 .input-field button {
-    font-size: 16px; /* Adjust button font size */
-    width: 15
+    font-size: 10px; /* Adjust button font size */
+    width: 50px;
+}
+
+
+.currency-form {
+    top: 200px;
+    left: 0px;
+    width: 100%;
+    background-color: #868fd5; /* Change the background color to your preference */
+    padding: 50px; /* Adjust padding as needed for spacing */
+    text-align: left; /* Center the buttons horizontally */
+    font-size: 16px;
+}
+
+.currency-form button {
+    font-size: 10px; /* Adjust button font size */
+    width: 50px;
 }
