--- a/templates/about.html
+++ b/templates/about.html
@@ -10,16 +10,27 @@
 
 <body>
     <h2>About</h2>
+    <div class="header-pages">
     {% if 'username' in session %}
-        <p><a href="{{ url_for('logout') }}"><button>Logout</button></a>
-            <a href="{{ url_for('index') }}"><button>Main Page</button></a>
+        <p><a href="{{ url_for('logout') }}"><button>
+                <img src="{{ url_for('static', filename='link-icons/logout.svg') }}" alt=logout.svg></button>
+            </a>
+            <a href="{{ url_for('index') }}"><button>
+                <img src="{{ url_for('static', filename='link-icons/house-solid.svg') }}" alt=house-solid.svg></button>
+            </a>
             <a href="{{ url_for('dashboard') }}"><button>Dashboard</button></a>
     {% else %}
-        <p><a href="{{ url_for('login') }}"><button>Login</button></a>
+        <p><a href="{{ url_for('login') }}"><button>
+                <img src="{{ url_for('static', filename='link-icons/login.svg') }}" alt=login.svg></button>
+            </a>
             <a href="{{ url_for('register') }}"><button>Register</button></a>
             <a href="{{ url_for('about') }}"><button>About</button></a>
-            <a href="{{ url_for('index') }}"><button>Main Page</button></a></p>
+            <a href="{{ url_for('index') }}"><button>
+                <img src="{{ url_for('static', filename='link-icons/house-solid.svg') }}" alt=house-solid.svg></button>
+            </a>
+        </p>
     {% endif %}
+    </div>
     <div class="center-div">
         <h2>Content "About"</h2>
         <p>App does`t store any personal data.</p>
