--- a/templates/currency.html
+++ b/templates/currency.html
@@ -13,29 +13,42 @@
 
 <body>
 <h2>Currency</h2>
+<div class="header-pages">
 {% if 'username' in session %}
-    <p><a href="{{ url_for('logout') }}"><button>Logout</button></a>
-        <a href="{{ url_for('index') }}"><button>Main Page</button></a>
+    <p><a href="{{ url_for('logout') }}"><button>
+            <img src="{{ url_for('static', filename='link-icons/logout.svg') }}" alt=logout.svg></button>
+        </a>
+        <a href="{{ url_for('index') }}"><button>
+            <img src="{{ url_for('static', filename='link-icons/house-solid.svg') }}" alt=house-solid.svg></button>
+        </a>
         <a href="{{ url_for('dashboard') }}"><button>Dashboard</button></a>
 {% else %}
-    <p><a href="{{ url_for('login') }}"><button>Login</button></a>
+    <p><a href="{{ url_for('login') }}"><button>
+            <img src="{{ url_for('static', filename='link-icons/login.svg') }}" alt=login.svg></button>
+        </a>
         <a href="{{ url_for('register') }}"><button>Register</button></a>
         <a href="{{ url_for('about') }}"><button>About</button></a>
-        <a href="{{ url_for('index') }}"><button>Main Page</button></a></p>
+        <a href="{{ url_for('index') }}"><button>
+                <img src="{{ url_for('static', filename='link-icons/house-solid.svg') }}" alt=house-solid.svg></button>
+            </a>
 {% endif %}
-<p>Available 150 currency market options</p>
-<p>Start typing currency Key (ex:"USD")</p>
-<p>You can type country name and choose one of suggested options</p>
-<form id="currencyForm" action="/currency" method="post">
-    <label for="user_input_currency_1">Enter currency you want to sell:</label>
-    <input type="text" id="user_input_currency_1" name="user_input_currency_1" required>
-    <label for="user_input_currency_2">Enter currency you want to purchase:</label>
-    <input type="text" id="user_input_currency_2" name="user_input_currency_2" required>
-    <label for="user_input_amount">Enter amount:</label>
-    <input type="text" id="user_input_amount" name="user_input_amount">
-    <button type="submit">Get Value</button>
-</form>
-
+</div>
+<div class="currency-form">
+    <p>Available 150 currency market options</p>
+    <p>Start typing currency Key (ex:"USD")</p>
+    <p>You can type country name and choose one of suggested options</p>
+    <form id="currencyForm" action="/currency" method="post">
+        <label for="user_input_currency_1">Enter currency you want to sell:</label>
+        <input type="text" id="user_input_currency_1" name="user_input_currency_1" required>
+        <br>
+        <label for="user_input_currency_2">Enter currency you want to purchase:</label>
+        <input type="text" id="user_input_currency_2" name="user_input_currency_2" required>
+        <br>
+        <label for="user_input_amount">Enter amount:</label>
+        <input type="text" id="user_input_amount" name="user_input_amount">
+        <button type="submit">Get Value</button>
+    </form>
+</div>
 {% if currency_data %}
 <h2>You can sell {{user_input_amount}} {{user_input_currency_1}} for {{ currency_data.amount }}
     {{user_input_currency_2}}</h2>
