--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -9,22 +9,34 @@
 </head>
 
 <body>
+    <div class="header-pages">
     {% if 'username' in session %}
-        <p><a href="{{ url_for('logout') }}"><button>Logout</button></a>
-            <a href="{{ url_for('index') }}"><button>Main Page</button></a>
+        <p><a href="{{ url_for('logout') }}"><button>
+                <img src="{{ url_for('static', filename='link-icons/logout.svg') }}" alt=logout.svg></button>
+            </a>
+            <a href="{{ url_for('index') }}"><button>
+                <img src="{{ url_for('static', filename='link-icons/house-solid.svg') }}" alt=house-solid.svg></button>
+            </a>
             <a href="{{ url_for('about') }}"><button>About</button></a>
             <a href="{{ url_for('weather') }}"><button>Weather</button></a>
             <a href="{{ url_for('currency') }}"><button>Currency</button></a></p>
     {% else %}
-        <p><a href="{{ url_for('login') }}"><button>Login</button></a>
+        <p><a href="{{ url_for('login') }}"><button>
+                <img src="{{ url_for('static', filename='link-icons/login.svg') }}" alt=login.svg></button>
+            </a>
             <a href="{{ url_for('register') }}"><button>Register</button></a>
             <a href="{{ url_for('about') }}"><button>About</button></a>
-            <a href="{{ url_for('index') }}"><button>Main Page</button></a></p>
+            <a href="{{ url_for('index') }}"><button>
+                <img src="{{ url_for('static', filename='link-icons/house-solid.svg') }}" alt=house-solid.svg></button>
+            </a>
+        </p>
     {% endif %}
+    </div>
     <div class="center-div">
         <h2>Welcome, {{ username }}!</h2>
     </div>
     <p>Dashboard content goes here.</p>
+
 </body>
 
 </html>
