--- a/templates/weather.html
+++ b/templates/weather.html
@@ -12,22 +12,32 @@
     <h1>Weather</h1>
     <div class="header-pages">
         {% if 'username' in session %}
-            <p><a href="{{ url_for('logout') }}"><button>Logout</button></a>
-                <a href="{{ url_for('index') }}"><button>Main Page</button></a>
+            <p><a href="{{ url_for('index') }}"><button>
+                    <img src="{{ url_for('static', filename='link-icons/logout.svg') }}" alt=logout.svg></button>
+                </a>
+                <a href="{{ url_for('index') }}"><button>
+                    <img src="{{ url_for('static', filename='link-icons/house-solid.svg') }}" alt=house-solid.svg></button>
+                </a>
                 <a href="{{ url_for('dashboard') }}"><button>Dashboard</button></a>
+            </p>
         {% else %}
-            <p><a href="{{ url_for('login') }}"><button>Login</button></a>
+            <p><a href="{{ url_for('index') }}"><button>
+                <img src="{{ url_for('static', filename='link-icons/login.svg') }}" alt=login.svg></button>
+                </a>
                 <a href="{{ url_for('register') }}"><button>Register</button></a>
                 <a href="{{ url_for('about') }}"><button>About</button></a>
-                <a href="{{ url_for('index') }}"><button>Main Page</button></a></p>
+                <a href="{{ url_for('index') }}"><button>
+                    <img src="{{ url_for('static', filename='link-icons/house-solid.svg') }}" alt=house-solid.svg></button>
+                </a>
+            </p>
         {% endif %}
     </div>
     <div class="input-field">
         <form id="weatherForm" action="/weather" method="post">
             <label for="user_input"></label>
-            <input type="text" id="user_input" name="user_input" placeholder="Search City or Zip Code" required>
+            <input type="text" id="user_input" name="user_input" placeholder="City Name or Zip Code" required>
             <button type="submit">
-                <img src="{{ url_for('static', filename='link-icons/location.svg') }}" alt=location-solid.svg>
+                <img src="{{ url_for('static', filename='link-icons/location.svg') }}" alt=location-solid.svg>Search
             </button>
         </form>
     </div>
