--- a/templates/about.html
+++ b/templates/about.html
@@ -5,11 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-    <title>Dashboard</title>
+    <title>About</title>
 </head>
 
 <body>
-    <h2>About</h2>
     <div class="header-pages">
     {% if 'username' in session %}
         <p><a href="{{ url_for('logout') }}"><button>
@@ -18,20 +17,24 @@
             <a href="{{ url_for('index') }}"><button>
                 <img src="{{ url_for('static', filename='link-icons/house-solid.svg') }}" alt=house-solid.svg></button>
             </a>
-            <a href="{{ url_for('dashboard') }}"><button>Dashboard</button></a>
+            <a href="{{ url_for('dashboard') }}">
+                <button><img src="{{ url_for('static', filename='link-icons/book-atlas-solid.svg') }}" alt=book-atlas-solid.svg></button>
+            </a>
+        </p>
     {% else %}
         <p><a href="{{ url_for('login') }}"><button>
                 <img src="{{ url_for('static', filename='link-icons/login.svg') }}" alt=login.svg></button>
             </a>
-            <a href="{{ url_for('register') }}"><button>Register</button></a>
-            <a href="{{ url_for('about') }}"><button>About</button></a>
+            <a href="{{ url_for('register') }}">
+                <button><img src="{{ url_for('static', filename='link-icons/registration.svg') }}" alt=registration.svg></button>
+            </a>
             <a href="{{ url_for('index') }}"><button>
                 <img src="{{ url_for('static', filename='link-icons/house-solid.svg') }}" alt=house-solid.svg></button>
             </a>
         </p>
     {% endif %}
     </div>
-    <div class="center-div">
+    <div class="content-about">
         <h2>Content "About"</h2>
         <p>App does`t store any personal data.</p>
         <p>DB implemented for... saving users settings...</p>
@@ -47,7 +50,7 @@
                 <img src="{{ url_for('static', filename='link-icons/linkedin.svg') }}" alt=linkedin.svg>
             </a>
         </p>
-    </div>
+     </div>
 </body>
 
 </html>
