--- a/templates/currency.html
+++ b/templates/currency.html
@@ -21,12 +21,17 @@
         <a href="{{ url_for('index') }}"><button>
             <img src="{{ url_for('static', filename='link-icons/house-solid.svg') }}" alt=house-solid.svg></button>
         </a>
-        <a href="{{ url_for('dashboard') }}"><button>Dashboard</button></a>
+        <a href="{{ url_for('dashboard') }}">
+            <button><img src="{{ url_for('static', filename='link-icons/book-atlas-solid.svg') }}" alt=book-atlas-solid.svg></button>
+        </a>
+    </p>
 {% else %}
     <p><a href="{{ url_for('login') }}"><button>
             <img src="{{ url_for('static', filename='link-icons/login.svg') }}" alt=login.svg></button>
         </a>
-        <a href="{{ url_for('register') }}"><button>Register</button></a>
+        <a href="{{ url_for('register') }}">
+            <button><img src="{{ url_for('static', filename='link-icons/registration.svg') }}" alt=registration.svg></button>
+        </a>
         <a href="{{ url_for('about') }}"><button>About</button></a>
         <a href="{{ url_for('index') }}"><button>
                 <img src="{{ url_for('static', filename='link-icons/house-solid.svg') }}" alt=house-solid.svg></button>
