--- a/templates/index.html
+++ b/templates/index.html
@@ -11,17 +11,25 @@
 <body>
     <div class="header-pages">
     {% if 'username' in session %}
-        <p><a href="{{ url_for('logout') }}"><button>
-                <img src="{{ url_for('static', filename='link-icons/logout.svg') }}" alt=logout.svg> Logout</button>
+        <p><a href="{{ url_for('logout') }}">
+                <button><img src="{{ url_for('static', filename='link-icons/logout.svg') }}" alt=logout.svg></button>
             </a>
-            <a href="{{ url_for('dashboard') }}"><button>Dashboard</button></a>
-            <a href="{{ url_for('about') }}"><button>About</button></a></p>
+            <a href="{{ url_for('dashboard') }}">
+                <button><img src="{{ url_for('static', filename='link-icons/book-atlas-solid.svg') }}" alt=book-atlas-solid.svg></button></a>
+            <a href="{{ url_for('about') }}">
+                <button><img src="{{ url_for('static', filename='link-icons/info.svg') }}" alt=info.svg></button>
+            </a>
+        </p>
     {% else %}
-        <p><a href="{{ url_for('login') }}"><button>
-                <img src="{{ url_for('static', filename='link-icons/login.svg') }}" alt=login.svg> Login</button>
+        <p><a href="{{ url_for('login') }}">
+                <button><img src="{{ url_for('static', filename='link-icons/login.svg') }}" alt=login.svg> Login</button>
             </a>
-            <a href="{{ url_for('register') }}"><button>Register</button></a>
-            <a href="{{ url_for('about') }}"><button>About</button></a>
+            <a href="{{ url_for('register') }}">
+                <button><img src="{{ url_for('static', filename='link-icons/registration.svg') }}" alt=registration.svg>Registration</button>
+            </a>
+            <a href="{{ url_for('about') }}">
+                <button><img src="{{ url_for('static', filename='link-icons/info.svg') }}" alt=info.svg>About</button>
+            </a>
             {% endif %}
     </div>
     {% if error_message %}
@@ -30,8 +38,8 @@
     <div class ="MainPageContent">
         <p></p>
     </div>
-    <div class="center-div">
-        <p class="connect-text">To contribute to the next release, please contact
+    <div class="center-div-main">
+        <p class="connect-text">Share your ideas
             <a href="https://www.linkedin.com/in/yaroslav-ovsiienko">
                 <img src="{{ url_for('static', filename='link-icons/linkedin.svg') }}" alt=linkedin.svg>
             </a>
