--- a/templates/register.html
+++ b/templates/register.html
@@ -22,18 +22,19 @@
             <a href="{{ url_for('about') }}"><button>About</button></a>
         </p>
     {% else %}
-        <p><a href="{{ url_for('index') }}"><button>
-                <img src="{{ url_for('static', filename='link-icons/login.svg') }}" alt=login.svg></button>
+        <p><a href="{{ url_for('login') }}">
+                <button><img src="{{ url_for('static', filename='link-icons/login.svg') }}" alt=login.svg>
+                </button>
             </a>
-            <a href="{{ url_for('register') }}"><button>Register</button></a>
-            <a href="{{ url_for('about') }}"><button>About</button></a>
+            <a href="{{ url_for('about') }}">
+                <button><img src="{{ url_for('static', filename='link-icons/info.svg') }}" alt=info.svg></button></a>
             <a href="{{ url_for('index') }}"><button>
                 <img src="{{ url_for('static', filename='link-icons/house-solid.svg') }}" alt=house-solid.svg></button>
             </a>
         </p>
     {% endif %}
     </div>
-    <div class="center-div">
+    <div class="center-div-register">
         <h2>Registration</h2>
         <form method="post">
             <label for="username">Username:</label>
