--- a/templates/weather.html
+++ b/templates/weather.html
@@ -5,34 +5,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-    <title>Daily Notes</title>
+    <title>Weather</title>
 </head>
 
 <body>
     <div class="body-container">
         <div class="header-pages">
             {% if 'username' in session %}
-                <p><a href="{{ url_for('index') }}"><button>
-                        <img src="{{ url_for('static', filename='link-icons/logout.svg') }}" alt=logout.svg></button>
+                <div class="user-buttons">
+                    <a href="{{ url_for('logout') }}">
+                        <button><img src="{{ url_for('static', filename='link-icons/logout.svg') }}" alt=logout.svg></button>
                     </a>
-                    <a href="{{ url_for('index') }}"><button>
-                        <img src="{{ url_for('static', filename='link-icons/house-solid.svg') }}" alt=house-solid.svg></button>
+                    <a href="{{ url_for('index') }}">
+                        <button><img src="{{ url_for('static', filename='link-icons/house-solid.svg') }}" alt=house-solid.svg></button>
                     </a>
-                    <a href="{{ url_for('dashboard') }}"><button>Dashboard</button></a>
-                </p>
+                    <a href="{{ url_for('dashboard') }}">
+                        <button><img src="{{ url_for('static', filename='link-icons/book-atlas-solid.svg') }}" alt=book-atlas-solid.svg></button>
+                    </a>
+                </div>
             {% else %}
-                <p><a href="{{ url_for('index') }}"><button>
-                    <img src="{{ url_for('static', filename='link-icons/login.svg') }}" alt=login.svg></button>
+                <div class="guest-buttons">
+                    <a href="{{ url_for('login') }}">
+                        <button><img src="{{ url_for('static', filename='link-icons/login.svg') }}" alt=login.svg></button>
                     </a>
-                    <a href="{{ url_for('register') }}"><button>Register</button></a>
-                    <a href="{{ url_for('about') }}"><button>About</button></a>
-                    <a href="{{ url_for('index') }}"><button>
-                        <img src="{{ url_for('static', filename='link-icons/house-solid.svg') }}" alt=house-solid.svg></button>
+                    <a href="{{ url_for('register') }}">
+                        <button><img src="{{ url_for('static', filename='link-icons/registration.svg') }}" alt=registration.svg></button>
                     </a>
-                </p>
+                    <a href="{{ url_for('about') }}">
+                        <button><img src="{{ url_for('static', filename='link-icons/info.svg') }}" alt=info.svg></button></a>
+                    <a href="{{ url_for('index') }}">
+                        <button><img src="{{ url_for('static', filename='link-icons/house-solid.svg') }}" alt=house-solid.svg></button>
+                    </a>
+                </div>
             {% endif %}
         </div>
-        <div class="input-field">
+        <div class="input-section">
             <form id="weatherForm" action="/weather" method="post">
                 <label for="user_input"></label>
                 <input type="text" id="user_input" name="user_input" placeholder="City Name or Zip Code" required>
